--- a/index.html
+++ b/index.html
@@ -4,16 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Assignment</title>
+    <link rel="stylesheet" href="styles/design.css">
 </head>
 <body>
-    <header>
 
-    </header>
-    <main>
+<header class="header">
+    <div class="container">
+        <nav class="nav-section">
+            <h1 class="logo">LOGO</h1>
+            <ul>
+                <li>
+                    <a href="#"><button class="btn-primary">Sign Up</button></a>
+                </li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1>Cool Dark UI Template for <br> Webflow Agencies!</h1>
+                <a href="#"><button class="stay-btn">Stay Focused</button></a>
+            </div>
+        </div>
+    </div>
+</header>
 
-    </main>
-    <footer>
-        
-    </footer>
+<main>
+</main>
+
+<footer>
+</footer>
+
 </body>
 </html>
