action part done

--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
 </header>
 
 <main>
+    <div class="action">
+
+        <div class="section-action">
+            <h3>See It in Action</h3>
+            <p class="paragraph">Explore the live preview and imagine your <br> brand in this bold new look.</p>
+            <a href="#"><button class="stay-btn live-btn">Launch Live Preview</button></a>
+        </div>
+        <img class="action-pic" src="Assets/wc-mini.png" alt="">
+    </div>
 </main>
 
 <footer>
