--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 
 <main>
     <div class="action">
-
         <div class="section-action">
             <h3>See It in Action</h3>
             <p class="paragraph">Explore the live preview and imagine your <br> brand in this bold new look.</p>
@@ -37,6 +36,26 @@
         </div>
         <img class="action-pic" src="Assets/wc-mini.png" alt="">
     </div>
+
+    <section class="secondary-bg">
+        <div class="productive-user">
+            <h2 class="p-head">Joined Thousands of Productive Users</h2>
+            <div class="p-items">
+                <div class="p-item">
+                    <h1 class="item-title">50K</h1>
+                    <p class="item-description">Active Users</p>
+                </div>
+                <div class="p-item">
+                    <h1 class="item-title">2M+</h1>
+                    <p class="item-description">Focus Sessions</p>
+                </div>
+                <div class="p-item">
+                    <h1 class="item-title">95%</h1>
+                    <p class="item-description">Satisfiction Rate</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
 
 <footer>
