challenage part is complete

--- a/index.html
+++ b/index.html
@@ -1,65 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Assignment</title>
-    <link rel="stylesheet" href="styles/design.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>My First Assignment</title>
+  <link rel="stylesheet" href="styles/design.css" />
 </head>
 <body>
 
 <header class="header">
-    <div class="container">
-        <nav class="nav-section">
-            <h1 class="logo">LOGO</h1>
-            <ul>
-                <li>
-                    <a href="#"><button class="btn-primary">Sign Up</button></a>
-                </li>
-            </ul>
-        </nav>
-        <div class="banner">
-            <div class="banner-content">
-                <h1>Cool Dark UI Template for <br> Webflow Agencies!</h1>
-                <a href="#"><button class="stay-btn">Stay Focused</button></a>
-            </div>
-        </div>
+  <div class="container">
+    <nav class="nav-section">
+      <h1 class="logo">LOGO</h1>
+      <ul>
+        <li>
+          <a href="#"><button class="btn-primary">Sign Up</button></a>
+        </li>
+      </ul>
+    </nav>
+    <div class="banner">
+      <div class="banner-content">
+        <h1>Cool Dark UI Template for <br />Webflow Agencies!</h1>
+        <a href="#"><button class="stay-btn">Stay Focused</button></a>
+      </div>
     </div>
+  </div>
 </header>
 
 <main>
-    <div class="action">
-        <div class="section-action">
-            <h3>See It in Action</h3>
-            <p class="paragraph">Explore the live preview and imagine your <br> brand in this bold new look.</p>
-            <a href="#"><button class="stay-btn live-btn">Launch Live Preview</button></a>
-        </div>
-        <img class="action-pic" src="Assets/wc-mini.png" alt="">
+  <div class="action">
+    <div class="section-action">
+      <h3>See It in Action</h3>
+      <p class="paragraph">
+        Explore the live preview and imagine your <br />brand in this bold new look.
+      </p>
+      <a href="#"><button class="stay-btn live-btn">Launch Live Preview</button></a>
     </div>
+    <img class="action-pic" src="Assets/wc-mini.png" alt="Action Image" />
+  </div>
 
-    <section class="secondary-bg">
-        <div class="productive-user">
-            <h2 class="p-head">Joined Thousands of Productive Users</h2>
-            <div class="p-items">
-                <div class="p-item">
-                    <h1 class="item-title">50K</h1>
-                    <p class="item-description">Active Users</p>
-                </div>
-                <div class="p-item">
-                    <h1 class="item-title">2M+</h1>
-                    <p class="item-description">Focus Sessions</p>
-                </div>
-                <div class="p-item">
-                    <h1 class="item-title">95%</h1>
-                    <p class="item-description">Satisfiction Rate</p>
-                </div>
-            </div>
+  <section class="secondary-bg">
+    <div class="productive-user">
+      <h2 class="p-head">Joined Thousands of Productive Users</h2>
+      <div class="p-items">
+        <div class="p-item">
+          <h1 class="item-title">50K</h1>
+          <p class="item-description">Active Users</p>
         </div>
-    </section>
+        <div class="p-item">
+          <h1 class="item-title">2M+</h1>
+          <p class="item-description">Focus Sessions</p>
+        </div>
+        <div class="p-item">
+          <h1 class="item-title">95%</h1>
+          <p class="item-description">Satisfaction Rate</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="testimonial-section">
+    <h2 class="testimonial-title">What our users say</h2>
+    <div class="testimonial-cards">
+      <div class="testimonial-card">
+        <div class="stars">
+          <img src="Assets/icon-star.png" alt="star" />
+          <img src="Assets/icon-star.png" alt="star" />
+          <img src="Assets/icon-star.png" alt="star" />
+          <img src="Assets/icon-star.png" alt="star" />
+          <img src="Assets/icon-star.png" alt="star" />
+        </div>
+        <h3>Loved by Designers</h3>
+        <p>This template instantly leveled up our presence. ~ Studio Vertex</p>
+        <div class="reviewer">
+          <img src="Assets/avatar.png" alt="Reviewer" class="avatar" />
+          <div class="reviewer-info">
+            <p class="name">Reviewer name</p>
+            <p class="date">Date</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="testimonial-card">
+        <div class="stars">
+          <img src="Assets/icon-star.png" alt="star" />
+          <img src="Assets/icon-star.png" alt="star" />
+          <img src="Assets/icon-star.png" alt="star" />
+          <img src="Assets/icon-star.png" alt="star" />
+          <img src="Assets/icon-star.png" alt="star" />
+        </div>
+        <h3>Loved by Designers</h3>
+        <p>This template instantly leveled up our presence. ~ Studio Vertex</p>
+        <div class="reviewer">
+          <img src="Assets/avatar.png" alt="Reviewer" class="avatar" />
+          <div class="reviewer-info">
+            <p class="name">Reviewer name</p>
+            <p class="date">Date</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="testimonial-card">
+        <div class="stars">
+          <img src="Assets/icon-star.png" alt="star" />
+          <img src="Assets/icon-star.png" alt="star" />
+          <img src="Assets/icon-star.png" alt="star" />
+          <img src="Assets/icon-star.png" alt="star" />
+          <img src="Assets/icon-star.png" alt="star" />
+        </div>
+        <h3>Loved by Designers</h3>
+        <p>This template instantly leveled up our presence. ~ Studio Vertex</p>
+        <div class="reviewer">
+          <img src="Assets/avatar.png" alt="Reviewer" class="avatar" />
+          <div class="reviewer-info">
+            <p class="name">Reviewer name</p>
+            <p class="date">Date</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  
+  <section class="focus-section">
+    <div class="focus-main">
+    <h2 class="focus-title">Ready to focus better</h2>
+    <p class="focus-subtext">
+      This template instantly leveled up our presence. – Studio Vertex
+    </p>
+    <a href="#" class="btn-primary">Get Started Free</a>
+    </div>
+    <img class="focus-image" src="Assets/wc-big.png" alt="Webflow Conf Image" />
+  </section>
 </main>
 
-<footer>
-</footer>
+<footer></footer>
 
 </body>
 </html>
