--- a/index.html
+++ b/index.html
@@ -132,6 +132,21 @@
     </div>
     <img class="focus-image" src="Assets/wc-big.png" alt="Webflow Conf Image" />
   </section>
+  <section class="form-part">
+    <div class="form-text">
+        <h1>Let’s Get in <br> Touch</h1>
+    </div>
+    <form action="">
+         <label for="Email">Email</label><br>
+    <input type="text" id="" name="Email" placeholder=" example@email.com">
+         <label for="Name">Name</label><br>
+    <input type="text" id="" name="name" placeholder=" full name">
+     <label for="message">Message:</label><br>
+    <textarea id="message" name="message" placeholder=" Write your message...." rows="20" cols="40"></textarea>
+    <a href="#"><button class="btn-primary last-btn">Get in Touch</button></a>
+</form>
+
+  </section>
 </main>
 
 <footer></footer>
